--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,23 @@
 --- #YAML:1.0
 name: Object-Meta-Plugin
-version: 0.02_01
+version: 0.02_02
 license: perl
 distribution_type: module
 requires:
+  Carp: '>= 1.01'
+  Scalar::Util: 0
   Tie::RefHash: '>= 1.3'
-  perl: 5.8.0
+  autouse: '>= 1.03'
+  perl: '>= 5.8.0'
 recommends:
-  Devel::Symdump: '>= 2.0'
+  Class::ISA: '>= 0.32'
+  Devel::Symdump: '>= 2.03'
 build_requires: {}
 conflicts: {}
 provides:
   Object::Meta::Plugin:
     file: lib/Object/Meta/Plugin.pm
-    version: 0.02_01
+    version: 0.02_02
   Object::Meta::Plugin::ExportList:
     file: lib/Object/Meta/Plugin/ExportList.pm
     version: 0.02
@@ -52,7 +56,7 @@ provides:
     version: 0.01
   Object::Meta::Plugin::Useful::Greedy:
     file: lib/Object/Meta/Plugin/Useful/Greedy.pm
-    version: 0.01
+    version: 0.02
   Object::Meta::Plugin::Useful::Meta:
     file: lib/Object/Meta/Plugin/Useful/Meta.pm
     version: 0.01
