--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,23 @@
 --- #YAML:1.0
 name: Object-Meta-Plugin
-version: 0.02_03
+version: 0.02_04
 license: perl
 distribution_type: module
 requires:
-  Carp: '>= 1.01'
+  Carp: 0
   Scalar::Util: 0
-  Tie::RefHash: '>= 1.3'
-  autouse: '>= 1.03'
+  Tie::RefHash: 0
+  autouse: 0
   perl: '>= 5.8.0'
 recommends:
-  Class::ISA: '>= 0.32'
-  Devel::Symdump: '>= 2.03'
+  Class::ISA: 0
+  Devel::Symdump: 0
 build_requires: {}
 conflicts: {}
 provides:
   Object::Meta::Plugin:
     file: lib/Object/Meta/Plugin.pm
-    version: 0.02_03
+    version: 0.02_04
   Object::Meta::Plugin::ExportList:
     file: lib/Object/Meta/Plugin/ExportList.pm
     version: 0.02
@@ -33,19 +33,10 @@ provides:
   Object::Meta::Plugin::Host::Context::Offset:
     file: lib/Object/Meta/Plugin/Host.pm
     version: 0.02
-  ? |-
-    Object::Meta::Plugin::Host::Context::TiedSelf::ARRAY
-:
+  Object::Meta::Plugin::Host::Context::Overloaded:
     file: lib/Object/Meta/Plugin/Host.pm
     version: 0.02
-  ? |-
-    Object::Meta::Plugin::Host::Context::TiedSelf::HASH
-:
-    file: lib/Object/Meta/Plugin/Host.pm
-    version: 0.02
-  ? |-
-    Object::Meta::Plugin::Host::Context::TiedSelf::SCALAR
-:
+  Object::Meta::Plugin::Host::Context::TiedSelf:
     file: lib/Object/Meta/Plugin/Host.pm
     version: 0.02
   Object::Meta::Plugin::Useful:
